0.63 //done fixed duplicate PlayProgressInterval in iframe. Sometimes YT Player would dispatch started twice(occurs after changing track a few times or/and(not sure which one) switching to popup Player) //done added commands //done moved tooltips to separate file, fixed css z-index
//TODO remove temporary while working on PTI pieces
//TODO fix parse.html playlist style width & overflow issue
//TODO separate markups for each extension page
//TODO optimize script loading for extension
//TODO create loading bar
//TODO https://www.youtube.com/embed/?listType=playlist&amp;list=PLhBgTdAWkxeBX09BokINT1ICC5IZ4C0ju&amp;showinfo=1
//TODO syndicate issue
//TODO strange vimeo player, check for seekTo and other methods
//TODO bootstrap.js conflicts with jQuery tooltip
//TODO implement pti errorTimeout, pti playTimeout(loadingTimeout)
//TODO video switch and resuming fails when switched from main popup player to background player( https://www.youtube.com/watch?v=yxMcuzOgVrU )

git-svn-id: https://kladecinfo.googlecode.com/svn/trunk@444 b2ecd63b-ce3e-1a2e-dd73-34ad02cb03ca

--- a/kladecytI/web/css/temp.css
+++ b/kladecytI/web/css/temp.css
@@ -38,4 +38,4 @@
 .temp-panel-heading { color: white; background-color: #007fff; border-color: #007fff; height: 35px; margin-bottom: 12px; line-height: 30px; padding-left: 15px; }
 .temp-playlist-drop-here { background: url('/css/resources/playlist.png') no-repeat 50% 50%; }
 .button>.temp-play-tooltip { display: none; }
-.button:hover>.temp-tooltip-active.temp-play-tooltip { display: block; position: relative; height: 13px; top: 40px; left: -137px; width: 200px; height: 80px; font-size: 11px; line-height: inherit; }
+.button:hover>.temp-tooltip-active.temp-play-tooltip { display: block; position: relative; height: 13px; top: 40px; left: -137px; width: 200px; height: 80px; font-size: 11px; line-height: inherit; z-index: 999}
